Try to make this test less timing dependent.
        * media/video-currentTime-set-expected.txt:
        * media/video-currentTime-set.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27791 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/media/video-currentTime-set.html
+++ b/LayoutTests/media/video-currentTime-set.html
@@ -5,11 +5,10 @@ waitForEvent('load',
 function () { 
     video.currentTime = video.duration - 0.2; 
     video.play(); 
+    waitForEvent('timeupdate',
+    function () {
+        setTimeout(function () { test("false") }, 800);
+    });
+    waitForEventAndEnd('ended');
 });
-waitForEvent('play',
-function () {
-    setTimeout(function () { test("false") }, 400);
-});
-waitForEventAndEnd('ended');
-
 </script>
