Try to make this test less timing dependent.
        * http/tests/media/video-play-stall.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27801 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/http/tests/media/video-play-stall.html
+++ b/LayoutTests/http/tests/media/video-play-stall.html
@@ -1,4 +1,4 @@
-<video src="http://127.0.0.1:8000/media/video-load-and-stall.cgi?name=../../../media/content/test.mp4&stallAt=80000"></video>
+<video></video>
 <p>Test that dataunavailable, timeupdate and waiting events are sent when media load stalls in the middle.</p>
 <script src=../../../media/video-test.js></script>
 <script>
@@ -11,5 +11,6 @@ waitForEvent('canplay', function () {
     waitForEvent('timeupdate');
     waitForEventAndEnd('waiting');
 } );
+video.src = "http://127.0.0.1:8000/media/video-load-and-stall.cgi?name=../../../media/content/test.mp4&stallAt=80000";
 video.play();
 </script>
