Make it easy to run Safari in the debugger on Windows
 WebKitSite:

         Update Windows debugging instructions

         Reviewed by Mark Rowe.

         * building/debug.html:

 WebKitTools:

         Make it easy to run Safari in the debugger on Windows

         I've added a new script, debug-safari, which launches Safari in the
         debugger. On OS X it just calls gdb-safari.

         Reviewed by Mark Rowe.

         * FindSafari/FindSafari.cpp:
         (_tmain): Added a /debugger flag, which in combination with
         /printSafariLauncher will print a script that launches Safari in the
         debugger.
         * Scripts/debug-safari: Added.
         * Scripts/run-safari: Changed to call runSafari().
         * Scripts/run-webkit-nightly.cmd: Prepends the launcher script with
         vsvars32.bat, which will let us find VS/VC++ Express, and passes the
         first argument along to FindSafari.
         * Scripts/webkitdirs.pm:
         (sub runSafari): Added.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27878 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/building/debug.html
+++ b/WebKitSite/building/debug.html
@@ -35,13 +35,8 @@
 </div>
 <div class="windows-instructions">
 <h2>Debugging on Windows</h2>
-<p>
-You can launch the Visual Studio development environment with the following
-command:</p>
-<p class="code">devenv /debugexe Safari.exe [args to safari]</p>
-<p>The arguments to Safari should be the same ones that <tt>run-safari</tt> uses,
-namely the <tt>/frameworkPath</tt> switch (to point to the path at which the updated
-WebKit can be found) and <tt>debug</tt> if the WebKit you built is a debug version.</p>
+<p>To launch Safari in the Visual Studio or Visual C++ Express debugger, simply run:</p>
+<p class="code">debug-safari</p>
 </div>
 
 <?php
