Rubber-stamped by bdash.
        Improve coverage of these tests.

        * media/video-muted-expected.txt:
        * media/video-muted.html:
        * media/video-volume-expected.txt:
        * media/video-volume.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27912 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/media/video-muted.html
+++ b/LayoutTests/media/video-muted.html
@@ -1,10 +1,16 @@
 <video></video>
+<p>Test 'muted' attribute<p>
 <script src=video-test.js></script>
 <script>
 test("!video.muted");
-video.muted = true;
+run("video.muted = true");
 test("video.muted");
-video.muted = false;
-test("!video.muted");
-endTest();
+video.src = "content/test.mp4";
+run("video.load()");
+waitForEvent("load", function () {
+    test("video.muted");
+    run("video.muted = false");
+    test("!video.muted");
+    endTest();
+});
 </script>
