2007-11-21  Mark Rowe  <mrowe@apple.com>
        Reviewed by Eric.

        Update coding style to cover control statements with no body.

        * coding/coding-style.html:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27950 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/coding/coding-style.html
+++ b/WebKitSite/coding/coding-style.html
@@ -280,6 +280,18 @@ if (condition) {
 }
 </pre>
 </li>
+
+<li>Control clauses without a body should use empty braces:
+<h4 class="right">Right:</h4>
+<pre class="code">
+for ( ; current; current = current->next) { }
+</pre>
+
+<h4 class="wrong">Wrong:</h4>
+<pre class="code">
+for ( ; current; current = current->next);
+</pre>
+</li>
 </ol>
 
 <h3>Null, false and 0</h3>
