Set video src from script, not from the element attribute. This         guarantees load events do not fire before event listeners are registered.         This change does not affect test results.
        * media/progress-event.html:
        * media/video-autoplay.html:
        * media/video-buffered.html:
        * media/video-currentTime-set.html:
        * media/video-currentTime-set2.html:
        * media/video-currentTime.html:
        * media/video-dom-autoplay.html:
        * media/video-error-abort.html:
        * media/video-error-does-not-exist.html:
        * media/video-load-networkState.html:
        * media/video-load-readyState.html:
        * media/video-no-autoplay.html:
        * media/video-seekable.html:
        * media/video-seeking.html:
        * media/video-size.html:
        * media/video-src.html:
        * media/video-start.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27990 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/media/video-buffered.html
+++ b/LayoutTests/media/video-buffered.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 test("video.buffered.length == 0");
@@ -19,4 +19,5 @@ waitForEvent('load',
         endTest();
     }
 );
+video.src = "content/test.mp4";
 </script>
