--- a/LayoutTests/media/video-error-abort.html
+++ b/LayoutTests/media/video-error-abort.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 test("!video.error");
@@ -6,4 +6,5 @@ var didLoad = false;
 waitForEvent("begin", function () { if (didLoad) return; didLoad = true; video.load(); });
 waitForEventAndTest("abort", "video.error.code == MediaError.MEDIA_ERR_ABORTED");
 waitForEventTestAndEnd("load", "!video.error");
+video.src = "content/test.mp4";
 </script>
