--- a/LayoutTests/media/video-no-autoplay.html
+++ b/LayoutTests/media/video-no-autoplay.html
@@ -1,7 +1,8 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 test("video.paused");
 waitForEventAndTest("play", "false");
 waitForEvent("load", function () { setTimeout(testAndEnd('video.paused', 500)) });
+video.src = "content/test.mp4";
 </script>
