--- a/LayoutTests/media/video-src.html
+++ b/LayoutTests/media/video-src.html
@@ -1,5 +1,6 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 waitForEventTestAndEnd('begin', "relativeURL(video.currentSrc) == 'content/test.mp4'");
+video.src = "content/test.mp4";
 </script>
