--- a/LayoutTests/media/video-start.html
+++ b/LayoutTests/media/video-start.html
@@ -1,6 +1,7 @@
-<video src=content/test.mp4 start=1s></video>
+<video start=1s></video>
 <script src=video-test.js></script>
 <script>
 test("video.start == 1.0");
 waitForEventTestAndEnd('canplaythrough', "video.currentTime == 1.0");
+video.src = "content/test.mp4";
 </script>
