--- a/LayoutTests/media/progress-event.html
+++ b/LayoutTests/media/progress-event.html
@@ -1,6 +1,7 @@
-<video src="content/test.mp4"></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 waitForEventAndTest("begin", "!event.lengthComputable && event.loaded==0 && event.total==0");
 waitForEventTestAndEnd("load", "event.lengthComputable && event.loaded>0 && event.total>0");
+video.src = "content/test.mp4";
 </script>
