--- a/LayoutTests/media/video-currentTime-set2.html
+++ b/LayoutTests/media/video-currentTime-set2.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 waitForEvent('load',  
@@ -10,5 +10,5 @@ function () {
     test("video.currentTime.toFixed(1) == 3.1");
     endTest();
 });
-
+video.src = "content/test.mp4";
 </script>
