--- a/LayoutTests/media/video-load-readyState.html
+++ b/LayoutTests/media/video-load-readyState.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 test("video.readyState == HTMLMediaElement.DATA_UNAVAILABLE");
@@ -7,4 +7,5 @@ waitForEventAndTest("loadedmetadata", "video.readyState == HTMLMediaElement.DATA
 waitForEventAndTest("loadedfirstframe", "video.readyState == HTMLMediaElement.CAN_SHOW_CURRENT_FRAME");
 waitForEventAndTest("canshowcurrentframe", "video.readyState == HTMLMediaElement.CAN_SHOW_CURRENT_FRAME");
 waitForEventTestAndEnd("canplaythrough", "video.readyState == HTMLMediaElement.CAN_PLAY_THROUGH");
+video.src = "content/test.mp4";
 </script>
