--- a/LayoutTests/media/video-size.html
+++ b/LayoutTests/media/video-size.html
@@ -1,6 +1,7 @@
-<video src=content/test.mp4></video>
+<video></video>
 <script src=video-test.js></script>
 <script>
 test("video.videoWidth == 0 && video.videoHeight == 0");
 waitForEventTestAndEnd('loadedmetadata', "video.videoWidth > 0 && video.videoHeight > 0");
+video.src = "content/test.mp4";
 </script>
