--- a/LayoutTests/media/video-currentTime-set.html
+++ b/LayoutTests/media/video-currentTime-set.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4></video>
+<video src=content/test.mp4 controls></video>
 <script src=video-test.js></script>
 <script>
 waitForEvent('load',  
