--- a/LayoutTests/media/video-dom-end.html
+++ b/LayoutTests/media/video-dom-end.html
@@ -1,4 +1,4 @@
-<video autoplay src=content/test.mp4></video>
+<video autoplay src=content/test.mp4 controls></video>
 <script src=video-test.js></script>
 <script>
 video.end = 0.5;
