--- a/LayoutTests/media/video-dom-loopstart.html
+++ b/LayoutTests/media/video-dom-loopstart.html
@@ -1,4 +1,4 @@
-<video playcount=2></video>
+<video playcount=2 controls></video>
 <p>Test that playing video rewinds to time specified by the loopStart DOM attribute when it loops.</p>
 <script src=video-test.js></script>
 <script>
