--- a/LayoutTests/media/video-dom-start.html
+++ b/LayoutTests/media/video-dom-start.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Test that when start DOM attribute is set, playback starts from that time.</p>
 <script src=video-test.js></script>
 <script>
