--- a/LayoutTests/media/video-end.html
+++ b/LayoutTests/media/video-end.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4 end=0.5s></video>
+<video src=content/test.mp4 end=0.5s controls></video>
 <script src=video-test.js></script>
 <script>
 test("!video.ended");
