--- a/LayoutTests/media/video-loopend.html
+++ b/LayoutTests/media/video-loopend.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4 playcount=2 loopend=0.5s></video>
+<video src=content/test.mp4 playcount=2 loopend=0.5s controls></video>
 <p>Test that video loops when time reaches the value specified by the loopEnd attribute.</p>
 <script src=video-test.js></script>
 <script>
