--- a/LayoutTests/media/video-loopstart.html
+++ b/LayoutTests/media/video-loopstart.html
@@ -1,4 +1,4 @@
-<video playcount=2 loopstart=1s></video>
+<video playcount=2 loopstart=1s controls></video>
 <p>Test that playing video rewinds to time specified by the loopstart attribute when it loops.</p>
 <script src=video-test.js></script>
 <script>
