--- a/LayoutTests/media/video-pause-empty-events.html
+++ b/LayoutTests/media/video-pause-empty-events.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Test that pause() from EMPTY network state triggers load()</p>
 <script src=video-test.js></script>
 <script>
