--- a/LayoutTests/media/video-play-empty-events.html
+++ b/LayoutTests/media/video-play-empty-events.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Test that play() from EMPTY network state triggers load() and async play event.</p>
 <script src=video-test.js></script>
 <script>
