--- a/LayoutTests/media/video-play-pause-events.html
+++ b/LayoutTests/media/video-play-pause-events.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Test that calling play() and pause() triggers async play, timeupdate and pause events.</p>
 <script src=video-test.js></script>
 <script>
