--- a/LayoutTests/media/video-play-pause-exception.html
+++ b/LayoutTests/media/video-play-pause-exception.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Video has no src. Test that play() and pause() rethrow the exception from load(). Test that the play and pause events are not dispatched.</p>
 <script src=video-test.js></script>
 <script>
