--- a/LayoutTests/media/video-poster.html
+++ b/LayoutTests/media/video-poster.html
@@ -1,4 +1,4 @@
-<video poster="content/greenbox.png"></video>
+<video poster="content/greenbox.png" controls></video>
 <script src=video-test.js></script>
 <script>
 test("video.getAttribute('poster') == 'content/greenbox.png'");
