--- a/LayoutTests/media/video-seek-past-end-playing.html
+++ b/LayoutTests/media/video-seek-past-end-playing.html
@@ -1,4 +1,4 @@
-<video playcount=2></video>
+<video playcount=2 controls></video>
 <p>Test that seeking video with remaining loops past it's end rewinds to the beginning and continues playback.</p>
 <script src=video-test.js></script>
 <script>
