--- a/LayoutTests/media/video-source-media.html
+++ b/LayoutTests/media/video-source-media.html
@@ -1,4 +1,4 @@
-<video>
+<video controls>
     <source src=content/error.mpeg media="print">
     <source src=content/error2.mpeg media="screen and (min-device-width: 80000px)">
     <source src=content/test.mp4 media="screen and (min-device-width: 100px)">
