--- a/LayoutTests/media/video-src-change.html
+++ b/LayoutTests/media/video-src-change.html
@@ -1,4 +1,4 @@
-<video src=bogus></video>
+<video src=bogus controls></video>
 <div>
 Test that changing src attribute triggers load when network state is empty.<br>
 Test that it does not trigger load when network state is non-empty.
