--- a/LayoutTests/media/video-src-source.html
+++ b/LayoutTests/media/video-src-source.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4>
+<video src=content/test.mp4 controls>
     <source src=content/error.mpeg>
 </video>
 <script src=video-test.js></script>
