--- a/LayoutTests/media/video-width-height.html
+++ b/LayoutTests/media/video-width-height.html
@@ -1,4 +1,4 @@
-<video width=100 height=50></video>
+<video width=100 height=50 controls></video>
 <script src=video-test.js></script>
 <script>
 test("video.width == 100");
