--- a/LayoutTests/media/video-dom-loopcount.html
+++ b/LayoutTests/media/video-dom-loopcount.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4 loopend=0.2s end=0.2s></video>
+<video src=content/test.mp4 loopend=0.2s end=0.2s controls></video>
 <p>Test that playcount DOM attribute causes playback to end after right number of repeats.</p>
 <script src=video-test.js></script>
 <script>
