--- a/LayoutTests/media/video-dom-loopend.html
+++ b/LayoutTests/media/video-dom-loopend.html
@@ -1,4 +1,4 @@
-<video src=content/test.mp4 playcount=2></video>
+<video src=content/test.mp4 playcount=2 controls></video>
 <p>Test that video loops when time reaches the value specified by the loopEnd DOM attribute.</p>
 <script src=video-test.js></script>
 <script>
