--- a/LayoutTests/media/video-seek-past-end-paused.html
+++ b/LayoutTests/media/video-seek-past-end-paused.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Test that seeking paused video past it's duration time sets currentTime to duration and leaves video paused.</p>
 <script src=video-test.js></script>
 <script>
