--- a/LayoutTests/media/video-seeking.html
+++ b/LayoutTests/media/video-seeking.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <p>Test that seeking attribute is true in timeupdate event after seek and goes back to false when seeking completes </p>
 <script src=video-test.js></script>
 <script>
