--- a/LayoutTests/media/video-size.html
+++ b/LayoutTests/media/video-size.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <script src=video-test.js></script>
 <script>
 test("video.videoWidth == 0 && video.videoHeight == 0");
