--- a/LayoutTests/media/video-source-type.html
+++ b/LayoutTests/media/video-source-type.html
@@ -1,4 +1,4 @@
-<video>
+<video controls>
     <source src=content/error.mpeg type=video/blahblah>
     <source src=content/test.mp4 type=video/mpeg>
     <source src=content/error2.mpeg type=video/mpeg>
