--- a/LayoutTests/media/video-src.html
+++ b/LayoutTests/media/video-src.html
@@ -1,4 +1,4 @@
-<video></video>
+<video controls></video>
 <script src=video-test.js></script>
 <script>
 waitForEventTestAndEnd('begin', "relativeURL(video.currentSrc) == 'content/test.mp4'");
