--- a/LayoutTests/media/video-start.html
+++ b/LayoutTests/media/video-start.html
@@ -1,4 +1,4 @@
-<video start=1s></video>
+<video start=1s controls></video>
 <script src=video-test.js></script>
 <script>
 test("video.start == 1.0");
