* coding/commit-review-policy.html: Fixed a typo, added a footer.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28269 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/coding/commit-review-policy.html
+++ b/WebKitSite/coding/commit-review-policy.html
@@ -105,5 +105,8 @@ their review privilege may have it temporarily suspended on the
 request of any two Reviewers. In such a case, the requesting Reviewers
 should notify the webkit-reviewers list with a description of the
 offense. At this point, Reviewer or Committer status will be
-temporarily suspend for one week, pending outcome of the vote for
+temporarily suspended for one week, pending outcome of the vote for
 permanent revocation.</p>
+<?php
+    include("../footer.inc");
+?>
