Reviewed by Adam.
        Link to the commit and review policy.

        * coding/contributing.html:
        * nav.inc:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28271 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/coding/contributing.html
+++ b/WebKitSite/coding/contributing.html
@@ -71,23 +71,9 @@ on this page (and on the rest of the site as well) are located here unless other
 <p>It's handy to put this directory in your shell path so you can just type the commands without having to specify the path to
 the script each time.</p>
 
+<h2>Obtaining Commit and Review Privileges</h2>
+<p>Our <a href="commit-review-policy.html">Committer and Reviewer policy</a> provides details on obtaining commit and review privileges.</p>
 
-<h2>Obtaining Check-In Privileges</h2>
-<p>Contributors with a proven track record of good patch submissions and that have demonstrated an ability to work well with the community can
-obtain check-in privileges to the WebKit source tree. In order to obtain this check-in access, the contributor must find a reviewer who
-will act as a sponsor.</p>
-
-<p>The sponsor arranges a copy of the committer agreement to be sent to the contributor.
-Once the contributor sends a copy of the signed agreement to Apple, she or he receives check-in access.</p>
-
-
-<h2>Becoming a Reviewer</h2>
-<p>A contributor with check-in access may also become a reviewer.  In order to become a reviewer, the current reviewers must agree that the
-contributor is effectively functioning as an expert in a particular area of the code and is qualified to review patches submitted in
-that area.</p>
-
-<p>Reviewers are always responsible only for areas of code in which they are knowledgeable.
-If the reviewer does not feel qualified to handle a particular patch, then he or she will defer to another reviewer.</p>
 <?php
     include("../footer.inc");
 ?>
