2007-12-01  Julien Chaffraix  <julien.chaffraix@gmail.com>
        Bug 16189: XMLHttpRequest::setRequestHeader() should not set certain headers

        Reviewed by Darin Adler.

        * xml/XMLHttpRequest.cpp:
        (WebCore::canSetRequestHeader):

        Test: http/tests/xmlhttprequest/set-dangerous-headers.html

2007-12-01  Julien Chaffraix  <julien.chaffraix@gmail.com>

        Bug 16189: XMLHttpRequest::setRequestHeader() should not set certain headers

        Reviewed by Darin Adler.

        * http/tests/xmlhttprequest/set-dangerous-headers-expected.txt:
        * http/tests/xmlhttprequest/set-dangerous-headers.html: Added tests for new headers


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28301 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/http/tests/xmlhttprequest/set-dangerous-headers.html
+++ b/LayoutTests/http/tests/xmlhttprequest/set-dangerous-headers.html
@@ -11,9 +11,11 @@
 
     req.setRequestHeader("ACCEPT-CHARSET", "foobar");
     req.setRequestHeader("ACCEPT-ENCODING", "foobar");
+    req.setRequestHeader("CONNECTION", "foobar");
     req.setRequestHeader("CONTENT-LENGTH", "123456");
-    req.setRequestHeader("EXPECT", "100-continue");
+    req.setRequestHeader("CONTENT-TRANSFER-ENCODING", "foobar");
     req.setRequestHeader("DATE", "foobar");
+    req.setRequestHeader("EXPECT", "100-continue");
     req.setRequestHeader("HOST", "foobar");
     req.setRequestHeader("KEEP-ALIVE", "foobar");
     req.setRequestHeader("REFERER", "foobar");
@@ -22,6 +24,10 @@
     req.setRequestHeader("TRANSFER-ENCODING", "foobar");
     req.setRequestHeader("UPGRADE", "foobar");
     req.setRequestHeader("VIA", "foobar");
+
+    req.setRequestHeader("Proxy-", "foobar");
+    req.setRequestHeader("Proxy-test", "foobar");
+    req.setRequestHeader("PROXY-FOO", "foobar");
 
     try {
         req.send("");
