--- a/LayoutTests/http/tests/media/video-cookie-httponly.html
+++ b/LayoutTests/http/tests/media/video-cookie-httponly.html
@@ -29,6 +29,6 @@
             window.testRunner.notifyDone();
     } );
 </script>
-Tests that the media player will send the relevant cookies when requesting the media file.<br/>
+Tests that the media player will send the relevant httponly cookies when requesting the media file.<br/>
 </body>
 </html>
